audit(TASK-101): protocol v2 critical-agent audit DOWNGRADES TASK-99 B1 verdict — pair-1 invalid (no-op arm), numbers corrected, NULL/exhausted retracted to underpowered-n=1; ADDENDUM-12 + audit report